--- a/ITSupport.Web/Views/Home/Index.cshtml
+++ b/ITSupport.Web/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 <div class="row">
     <div class="col-md-8">
-      
-            <iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="https://oneidentity-gpm.hewitt.com/pmf/HelpDesk/ResetPassword.html" style="border: 0; width:100%; height:420px" name="iframe" scrolling="auto"></iframe>
-            </div>
-      
+
+        <iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="http://www.bing.com/search" style="border: 0; width:100%; height:420px" name="iframe" scrolling="auto"></iframe>
+
+    </div>
     <div class="col-md-4">
         <div class="row">
 
