--- a/ITSupport.Web/Views/Busca/Index.cshtml
+++ b/ITSupport.Web/Views/Busca/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model  IEnumerable<ITSupport.Web.Models.SearchInformation>
+﻿@model  IEnumerable<ITSupport.Lib.SearchInformation>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutModal.cshtml";
