--- a/ITSupport.Web/Views/Home/Index.cshtml
+++ b/ITSupport.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-8">
 
-        <iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="http://www.bing.com/search" style="border: 0; width:100%; height:420px" name="iframe" scrolling="auto"></iframe>
+        <iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="https://app.powerbi.com/view?r=eyJrIjoiMmYxNTkwMDQtYzM0Yy00NTM4LWI2ZjAtYTMyMmI4ZjU1NWM0IiwidCI6ImM3YzU2OTFlLWU4MDAtNGE4Ny05ZDAyLTUyMGQ0ZTY1YzUzOSJ9" style="border: 0; width:100%; height:420px" name="iframe" scrolling="auto"></iframe>
 
     </div>
     <div class="col-md-4">
@@ -38,8 +38,8 @@
             <div class="col-md-12">
                 <div class="panel panel-info">
                     <div class="panel-heading">
-                        <h3 class="panel-title">
-                            <p class="text-center"><strong>Ultimos Cadastros</strong></p>
+                        <h3 class="panel-title text-center">
+                            <strong>Ultimos Cadastros</strong>
                         </h3>
                     </div>
 
@@ -84,8 +84,8 @@
     <div class="col-md-4 ">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">
-                    <p class="text-center"><strong>Links Úteis</strong></p>
+                <h3 class="panel-title text-cente">
+                    <strong>Links Úteis</strong>
                 </h3>
             </div>
             <address>
