--- a/ITSupport.WebAdmin/Views/Cadastro/Computador.cshtml
+++ b/ITSupport.WebAdmin/Views/Cadastro/Computador.cshtml
@@ -1,5 +1,4 @@
-﻿@model ITSupport.WebAdmin.Models.CadastroComputador
-
+﻿@model ITSupport.Lib.CadastroComputador
 @{
     ViewBag.Title = "Computador";
     ViewBag.User = "Andre Abreu";
@@ -199,15 +198,10 @@
                             </div>
                             <div class="col-sm-3">
                                 <select id="Localidade" name="Localidade" class="form-control">
-                                    <option value="São Paulo">São Paulo</option>
-                                    <option value="Belo Horizonte">Belo Horizonte</option>
-                                    <option value="Campinas">Campinas</option>
-                                    <option value="Curitiba">Curitiba</option>
-                                    <option value="Porto Alegre">Porto Alegre</option>
-                                    <option value="Ribeirão Preto">Ribeirão Preto</option>
-                                    <option value="Rio de Janeiro">Rio de Janeiro</option>
-                                    <option value="Salvador">Salvador</option>
-                                    <option value="Vitória">Vitória</option>
+                                    @foreach (var item in ViewBag.Escritorios)
+                                    {
+                                        @Html.Raw(item)
+                                    }
                                 </select>
                             </div>
                             <div class="col-sm-3">
