Inclusao Controller Recursos Humanos e View Admissao

--- a/ITSupport.WebAdmin/Views/Cadastro/Computador.cshtml
+++ b/ITSupport.WebAdmin/Views/Cadastro/Computador.cshtml
@@ -48,7 +48,7 @@
                     <i class="fa fa-external-link-square"></i>
                     Formulario de Cadastro
 
-                   
+
                 </div>
                 <div class="panel-body">
                     @if (TempData["Success"] != null)
@@ -80,9 +80,9 @@
                             <i class="fa fa-desktop"></i> Hardware
                         </h3>
                     </p>
-                    <hr/>
+                    <hr />
 
-                    @using (Html.BeginForm("Computador", "Cadastro", FormMethod.Post, new {@class = "form-horizontal", id = "form"}))
+                    @using (Html.BeginForm("Computador", "Cadastro", FormMethod.Post, new { @class = "form-horizontal", id = "form" }))
                     {
                         @Html.ValidationSummary(true)
                         <div class="form-group">
@@ -112,7 +112,7 @@
                                 </select>
                             </div>
                             <div class="col-sm-3">
-                                @Html.EditorFor(m => m.ServiceTag, new {htmlAttributes = new {@class = "form-control  input-md", placeholder = Html.DisplayNameFor(m => m.ServiceTag)}})
+                                @Html.EditorFor(m => m.ServiceTag, new { htmlAttributes = new { @class = "form-control  input-md", placeholder = Html.DisplayNameFor(m => m.ServiceTag) } })
                                 <div class="help-block">
                                     <p class="text-danger">@Html.ValidationMessageFor(model => model.ServiceTag)</p>
                                 </div>
@@ -161,17 +161,17 @@
                             <i class="fa fa-building"></i> Alocacao
                         </h3>
                         <p>
-                            Preencha com os dados em que o equipamento esta alocado, informando sua Localidade e Centro de Custo. <br/><small><span class="label label-warning"> Aviso:</span>Dados inseridos incorretamente fara com que o Objeto no ActiveDirectory seja criado com local/nome errado e sera passada uma informacao incorreta para a Controladoria.</small>
+                            Preencha com os dados em que o equipamento esta alocado, informando sua Localidade e Centro de Custo. <br /><small><span class="label label-warning"> Aviso:</span>Dados inseridos incorretamente fara com que o Objeto no ActiveDirectory seja criado com local/nome errado e sera passada uma informacao incorreta para a Controladoria.</small>
                         </p>
-                        <hr/>
+                        <hr />
                         <div class="form-group">
 
                             <div class="col-sm-4 col-sm-offset-2">
                                 <span class="input-help">
-                                        @Html.EditorFor(m => m.Hostname, new {htmlAttributes = new {@class = "form-control  input-md", placeholder = Html.DisplayNameFor(m => m.Hostname)}})
+                                    @Html.EditorFor(m => m.Hostname, new { htmlAttributes = new { @class = "form-control  input-md", placeholder = Html.DisplayNameFor(m => m.Hostname) } })
 
-                                        <i class="help-button popovers" data-html="true" title="" data-content="Padrao: <i class=text-primary>[PAIS]</i> <i class=text-success>[LOCAL]</i> <i class=text-info>[TIPO]</i> <i class=text-warning>[ATIVO]</i><br />Ex.: Desktop de SP: <strong class=text-primary>BR</strong><strong class=text-success>SP</strong><strong class=text-warning>123456</strong><br />Ex.: Notebook de SP: <strong class=text-primary>BR</strong><strong class=text-success>SP</strong><strong class=text-info>N</strong><strong class=text-warning>123456</strong><br />Lista de padrao de Locais:<ul><li>Campinas - <strong>CPS</strong></li><li>Curitba - <strong>CTA</strong></li><li>Porto Alegre - <strong>POA</strong></li><li>Ribeirao Preto - <strong>RAO</strong></li><li>Rio de Janeiro - <strong>RJ</strong></li><li>Salvador - <strong>SAO</strong></li><li>Sao Paulo - <strong>SP</strong></li><li>Vitoria - <strong>ES</strong></li></ul>" data-placement="right" data-trigger="hover" data-rel="popover" data-original-title="Padrao de Hostname"></i>
-                                    </span>
+                                    <i class="help-button popovers" data-html="true" title="" data-content="Padrao: <i class=text-primary>[PAIS]</i> <i class=text-success>[LOCAL]</i> <i class=text-info>[TIPO]</i> <i class=text-warning>[ATIVO]</i><br />Ex.: Desktop de SP: <strong class=text-primary>BR</strong><strong class=text-success>SP</strong><strong class=text-warning>123456</strong><br />Ex.: Notebook de SP: <strong class=text-primary>BR</strong><strong class=text-success>SP</strong><strong class=text-info>N</strong><strong class=text-warning>123456</strong><br />Lista de padrao de Locais:<ul><li>Campinas - <strong>CPS</strong></li><li>Curitba - <strong>CTA</strong></li><li>Porto Alegre - <strong>POA</strong></li><li>Ribeirao Preto - <strong>RAO</strong></li><li>Rio de Janeiro - <strong>RJ</strong></li><li>Salvador - <strong>SAO</strong></li><li>Sao Paulo - <strong>SP</strong></li><li>Vitoria - <strong>ES</strong></li></ul>" data-placement="right" data-trigger="hover" data-rel="popover" data-original-title="Padrao de Hostname"></i>
+                                </span>
                                 <div class="help-block">
                                     <p class="text-danger">@Html.ValidationMessageFor(model => model.Hostname)</p>
                                 </div>
@@ -179,9 +179,9 @@
 
                             <div class="col-sm-5">
                                 <span class="input-icon">
-                                        @Html.EditorFor(m => m.Ativo, new {htmlAttributes = new {@class = "form-control  input-md", placeholder = Html.DisplayNameFor(m => m.Ativo)}})
-                                        <i class="fa fa-barcode">&nbsp;&nbsp;</i>
-                                    </span>
+                                    @Html.EditorFor(m => m.Ativo, new { htmlAttributes = new { @class = "form-control  input-md", placeholder = Html.DisplayNameFor(m => m.Ativo) } })
+                                    <i class="fa fa-barcode">&nbsp;&nbsp;</i>
+                                </span>
                                 <div class="help-block">
                                     <p class="text-danger">@Html.ValidationMessageFor(model => model.Ativo)</p>
                                 </div>
@@ -206,18 +206,18 @@
                             </div>
                             <div class="col-sm-3">
                                 <span class="input-icon">
-                                        <select id="CentroCusto" name="CentroCusto" class="form-control">
-                                            @*@foreach (var item in ViewBag.ListaCentroCusto)
-                                                {
-                                                    <option value="@item">@item</option>
-                                                }*@
-                                        </select>
-                                        <i class="fa fa-briefcase">&nbsp;&nbsp;</i>
-                                    </span>
+                                    <select id="CentroCusto" name="CentroCusto" class="form-control">
+                                        @foreach (var item in ViewBag.CentroDeCusto)
+                                        {
+                                            @Html.Raw(item)
+                                        }
+                                    </select>
+                                    <i class="fa fa-briefcase">&nbsp;&nbsp;</i>
+                                </span>
 
                             </div>
                         </div>
-                        <hr/>
+                        <hr />
                         <div class="form-group">
                             <div class="col-sm-3 col-sm-offset-2">
                                 <div class="checkbox">
@@ -235,7 +235,7 @@
                             </div>
 
                             <div class="col-sm-3 col-sm-offset-3">
-                                <input type="submit" name="submit" value="Enviar" class="btn btn-primary"/>
+                                <input type="submit" name="submit" value="Enviar" class="btn btn-primary" />
                                 <a href="~/" class="btn btn-danger">Cancelar </a>
                             </div>
                         </div>
