--- a/ITSupport.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/ITSupport.WebAdmin/Views/Shared/_Layout.cshtml
@@ -218,9 +218,20 @@
     @Scripts.Render("~/bundles/plugins")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jquerymodal")
+@*@Scripts.Render("~/bundles/jquerywizard")*@
+
+    <script src="/assets/plugins/jquery-inputlimiter/jquery.inputlimiter.1.3.1.min.js"></script>
+    <script src="/assets/plugins/autosize/jquery.autosize.min.js"></script>
+    <script src="/assets/plugins/select2/select2.min.js"></script>
+    <script src="/assets/plugins/jquery.maskedinput/src/jquery.maskedinput.js"></script>
+    <script src="/assets/plugins/jquery-maskmoney/jquery.maskMoney.js"></script>
+    <script src="/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script src="/assets/js/form-elements.js"></script>
 
 
-    <div id="frame" class="modal fade" tabindex="-1" data-width="760" style="display: none; width: 760px; margin-left: -379px; margin-top: -249px;" aria-hidden="true">
+
+
+<div id="frame" class="modal fade" tabindex="-1" data-width="760" style="display: none; width: 760px; margin-left: -379px; margin-top: -249px;" aria-hidden="true">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                 ×
@@ -241,6 +252,8 @@
         jQuery(document)
             .ready(function () {
                 Main.init();
+                FormWizard.init();
+                FormElements.init();
             });
 
 
